# icescreen

./: .DISABLED.gitlab-ci.yml  .flake8  .gitignore  .gitlab-ci.yml  AUTHORS.txt  Dockerfile  INSTALL  LICENCE.txt  LOG_public_releases  LOG_public_releases.md  README.md  environment.yaml  icescreen  install_icescreen  pyproject.toml
.github/workflows/: release.yml
database/blastdb/: DDE.faa  ICE_Finder.db  IntSer.faa  IntTyr.faa  Relaxase.faa  VirB4.faa
database/mode/: bacillota.yml
detection_ME/: .gitignore  LOG_VERSION  README  icescreen.conf  runTests.sh
detection_ME/src/: EMStructure.py  EMTypeStructure.py  hit.py  icescreen_OO.py  rulesAddIntegrases.py  rulesMergeICEIMEStructures.py  rulesSeedSPExtension.py
detection_SP/src/: gb_to_faa.py  merge_SP_results.py  process_hmmscan_fp.py  (+2 more)
envs/: icescreen_env.yml
formatting/: genbank_to_gff3_and_fasta.py  generate_annotation_files.py
icescreen_detection_ME/: LOG_VERSION  README  icescreen.conf  runTests.sh
icescreen_detection_SP/: HOW_TO_detection_SP.md
icescreen_envs/: OLD_detailed_spec-file.txt  icescreen_env.yml  icescreen_env_1-3-1.yml  icescreen_env_1-3-2.yml  icescreen_env_1-3-3.yml
icescreen_formatting/: GFF3_Module.py  genbank_to_gff3_and_fasta.py  generate_annotation_files.py
icescreen_pipelines/: edit_configfile.sh  final_organize_output_files.sh  icescreen.snakefile  icescreen_config_template.yml
pipelines/: edit_configfile.sh  icescreen.snakefile
test-data/: NC_004668.1_detected_ME.summary  NC_004668.1_detected_ME.tsv  NC_004668.1_detected_SP_withMEIds.tsv  NC_004668.1_icescreen.embl
(+126 files in other folders)
