[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icescreen"
version = "1.3.3"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "biopython==1.85",
    "pyarrow",
    "decorator",
    "scipy",
    "requests",
    "PyYAML"
]

[tool.setuptools.packages.find]
include = [
    "icescreen_pipelines*",
    "icescreen_formatting",
    "icescreen_detection_ME*",
    "icescreen_detection_SP*"
]

[project.scripts]
genbank_to_gff3_and_fasta = "icescreen_formatting.genbank_to_gff3_and_fasta:main"
generate_annotation_files = "icescreen_formatting.generate_annotation_files:main"
icescreen_OO = "icescreen_detection_ME.src.icescreen_OO:main"
process_hmmscan_fp = "icescreen_detection_SP.src.process_hmmscan_fp:main"
gb_to_faa = "icescreen_detection_SP.src.gb_to_faa:main"
merge_SP_results = "icescreen_detection_SP.src.merge_SP_results:main"
process_blastp_results = "icescreen_detection_SP.src.process_blastp_results:main"
retain_only_best_blast_hit_for_each_locus_tag = "icescreen_detection_SP.src.retain_only_best_blast_hit_for_each_locus_tag:main"
process_hmmscan_results = "icescreen_detection_SP.src.process_hmmscan_results:main"
reannot_SP = "icescreen_detection_SP.src.reannot_SP:main"
